<resources>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="login_header">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_invalid_password">Password too short</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="app_name">Apartment Hunters</string>

    <!-- Strings related to add roommates -->
    <string name="add_roommates_header">Add Roommates</string>
    <string name="add_by_user">Add by username</string>
    <string name="current_roommates">Your Roommates:</string>
    <string name="add_roommate">Continue</string>
    <string name="add_by_email">Add by email</string>
    <string name="add_by_phone">Add by phone</string>
    <string name="group_exists">Already in a group? Skip this step</string>
    <string name="skip_add_roommates">Skip this step</string>
    <string name="title_activity_features_activity">Features</string>

    <!-- Strings related to checking off features -->
    <string name="prefs_header">Apartment Preferences</string>
    <string name="checklist_prompt"> What features are you looking for in an apartment?</string>
    <string name="prompt_add_feature">Add new feature </string>
    <string name="action_add_feature">Add</string>
    <string name="continue_from_criteria"> Continue </string>


    <string name="two_singles"> 2 singles</string>
    <string name="one_single"> 1 single</string>
    <string name="living_room"> living room</string>
    <string name="spacious_kitchen"> spacious kitchen</string>
    <string name="in_unit_laundry"> in-unit laundry</string>
    <string name="utilities_included"> utilities included</string>

    <!-- Strings related to selecting price range -->
    <string name="prompt_price_range">If applicable, enter maximum price for total monthly rent (you + roommates).</string>
    <string name="prompt_hi">Max price</string>
    <string name="title_activity_maps">Map</string>

    <!-- Strings for the main apartment ranking page -->
    <string name="apt2_address">1061 Tremont Street, Apt. #7 Roxbury Crossing, MA 02120</string>
    <string name="apt3_address">569 Cunard Street, Apt. #1 Roxbury Crossing, MA 02120</string>
    <string name="filter">Filter by:</string>

    <!-- Strings for the apartment page -->
    <string name="apt_edit_header">Edit Apartment Information</string>
    <string name="apt_address"> 753 Columbus Avenue, Apt. #3 Roxbury Crossing, MA 02120</string>
    <string name="prompt_match">Compare to my checklist</string>
    <string name="action_add_price">Add price</string>
    <string name="prompt_extra_notes">Add/View extra notes</string>
    <string name="extra_notes_header">Extra Notes</string>
    <string name="add_extra_notes">Add extra notes</string>
    <string name="prompt_add_photos">Add photos/videos</string>


    <string name="matches_0">Matches mandatory criteria: </string>

    <string name="additional_features">Additional features: </string>

    <string name="take_new_photo">Take new photo</string>
    <string name="select">Add Selected Photos</string>
    <string name="open_existing_image">Open existing image</string>
    <string name="cannotopencamera">cannot open camera</string>


    <string name="action_done_add"> DONE</string>
    <string name="back">Back</string>


</resources>
