<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeaturesActivity">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/prompt_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_hi"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="336dp" />

    <TextView
        android:id="@+id/checklist_prompt"
        android:layout_width="374dp"
        android:layout_height="49dp"
        android:text="@string/checklist_prompt"
        android:textSize="18sp" />

    <Button
        android:id="@+id/add_feature"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:text="@string/action_add_feature"
        tools:layout_editor_absoluteX="233dp"
        tools:layout_editor_absoluteY="213dp" />

    <TextView
        android:id="@+id/price_range_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_price_range"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="290dp" />

    <Button
        android:id="@+id/continue_from_criteria"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:text="@string/continue_from_criteria"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="417dp" />

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="446dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="49dp">

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CheckBox" />

        <CheckBox
            android:id="@+id/checkBox7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CheckBox" />

        <CheckBox
            android:id="@+id/checkBox8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CheckBox" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CheckBox" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_add_feature">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/prompt_add_own_feature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_add_feature" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>