<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ApartmentEditActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableRow
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--tools:layout_editor_absoluteX="0dp"-->
        <!--tools:layout_editor_absoluteY="0dp">-->

        <Button
            android:id="@+id/back_to_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back" />

        <ImageButton
            android:id="@+id/home"
            android:layout_width="49dp"
            android:layout_height="match_parent"
            app:srcCompat="@android:color/holo_orange_light" />
        <!--tools:layout_editor_absoluteX="236dp"-->
        <!--tools:layout_editor_absoluteY="8dp" />-->

        <ImageButton
            android:id="@+id/add_new_apt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_input_add" />

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@android:color/darker_gray"
            tools:layout_editor_absoluteX="311dp"
            tools:layout_editor_absoluteY="16dp" />

    </TableRow>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="162dp"
        android:layout_height="120dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/living_room"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav" />
    <!--tools:layout_editor_absoluteX="16dp"-->
    <!--tools:layout_editor_absoluteY="89dp"-->


    <TextView
        android:id="@+id/apt_description"
        android:layout_width="189dp"
        android:layout_height="74dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/apt_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />
    <!--tools:layout_editor_absoluteX="190dp"-->
    <!--tools:layout_editor_absoluteY="89dp" />-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="151dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/landlord_info_prompt"
        app:layout_constraintEnd_toEndOf="@+id/landlord_info_prompt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/landlord_info_prompt"
        app:layout_constraintTop_toBottomOf="@+id/apt_description"
        app:layout_constraintVertical_bias="1.0">
        <!--tools:layout_editor_absoluteX="186dp"-->
        <!--tools:layout_editor_absoluteY="164dp">-->

        <android.support.design.widget.TextInputEditText
            android:layout_width="126dp"
            android:layout_height="match_parent"
            android:hint="@string/action_add_price"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/landlord_info_prompt"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/prompt_add_landlord"
        app:layout_constraintBottom_toBottomOf="@+id/prompt_photos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/prompt_photos"
        app:layout_constraintTop_toTopOf="@+id/prompt_photos"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/prompt_photos"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/prompt_add_photos"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <!--tools:layout_editor_absoluteX="57dp"-->
    <!--tools:layout_editor_absoluteY="279dp"-->

    <!--tools:layout_editor_absoluteX="67dp"-->
    <!--tools:layout_editor_absoluteY="301dp" />-->

    <Button
        android:id="@+id/extra_notes"
        android:layout_width="156dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/prompt_extra_notes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="169dp"
        android:layout_height="123dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prompt_photos">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matches_0" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two_singles" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/living_room" />

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.TextInputLayout
        android:layout_width="176dp"
        android:layout_height="204dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/prompt_add_feature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="@+id/scrollView2">

        <ScrollView
            android:id="@+id/scrollview4"
            android:layout_width="match_parent"
            android:layout_height="197dp">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/additional_features"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/additional_features" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/prompt_add_own_feature"
                    style="@style/AppTheme"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_add_feature" />

                <Button
                    android:id="@+id/add_feature"
                    android:layout_width="72dp"
                    android:layout_height="36dp"
                    android:text="@string/action_add_feature" />

            </LinearLayout>
        </ScrollView>

    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>